2005-08-24  Vincent Untz  <vuntz@gnome.org>

	* configure.in:
	- post-release bump to 2.12.0

==================== 2.11.92 ====================

2005-08-24  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* configure.in:
	- Version 2.11.92

2005-08-19  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	* src/yelp-toc-pager.c:
	* src/yelp-window.c:
	* src/yelp-xslt-pager.c:
	- Patch from Don Scorgie to fix crash, #172227

2005-07-25  Ross Burton  <ross@burtonini.com>

	* src/yelp-db-pager.c:
	Don't crash if a template isn't found when walking.

2005-07-25  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Initialize some variables, from Ross Burton, #311518

2005-07-13  Behdad Esfahbod  <gnome@behdad.org>

	* .cvsignore:
	- Added INSTALL.

	* src/yelp-settings.c (yelp_settings_init):
	- Fixed typo in character code in translator comment.
	  (Bug 310240, Roozbeh Pournader)

2005-07-12  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:
	Downgrade minimal mozilla version to 1.7 again, was accidentally
	not changed when copying the rest of the configure changes
	from Epiphany.

2005-07-12  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:
	Update gecko configure checks to also detect mozilla trunk
	which is now named 'seamonkey'.

2005-07-12  Shaun McCance  <shaunm@gnome.org>

	* NEWS:
	* configure.in:
	- Version 2.11.1

2005-07-05  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-toc-pager.c:
	- Fix possible leak

2005-07-05  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-bookmarks.c: 
	- Make bookmark headers insensitive
	
2005-05-19  Shaun McCance  <shaunm@gnome.org>

	* data/man.xml.in:
	* src/yelp-man-pager.c:
	* src/yelp-toc-pager.c:
	* stylesheets/db2html.xsl.in:
	* stylesheets/man2html.xsl:
	* stylesheets/yelp-common.xsl:
	- s/Man Pages/Manual Pages/
	- Added a linktrail to man pages

2005-05-16  Christian Persch  <chpe@cvs.gnome.org>

	* src/yelp-base.c: (yelp_base_init), (yelp_base_class_init):