@@ -1,3 +1,8 @@
+2005-08-24  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-xslt-pager.c:
+	- Patch from Brent Smith to fix crasher, #310420
+
 2005-08-24  Vincent Untz  <vuntz@gnome.org>
 
 	* configure.in:
